<resources>
    <string name="app_name">More</string>
    <string name="main_news">新闻</string>
    <string name="main_read">阅读</string>
    <string name="main_music">音乐</string>
    <string name="main_movie">视频</string>

    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>

    <string name="night_mode">夜间模式</string>
    <string name="day_mode">日间模式</string>
    <string name="setting">设置</string>

    <string name="action_settings">设置</string>
    <string name="action_comment">评论</string>
    <string name="action_share">分享</string>
    <string name="action_search">搜索</string>
</resources>
